syntax = "proto3";

package hello_world;

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
} 

message HelloResponse {
    string message = 1;
}
